hard-gists/5237011/run.log
=== Docker Run Log for 5237011 ===
Started at: Mi 29. Okt 15:29:43 CET 2025

[2025-10-29 15:29:43] START: Running container for 5237011
[2025-10-29 15:29:43] SUCCESS: Container 8801256214f1e0cc7eff27edd4625fb26cd152618852c98b864868d28bca42da started for 5237011
=== Container logs for 5237011 ===
  File "/snippet.py", line 35
    print ''.join(pr)
    ^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5237011 ===
[2025-10-29 15:29:45] INFO: Container 8801256214f1e0cc7eff27edd4625fb26cd152618852c98b864868d28bca42da has stopped
